--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container">
+  <!-- <app-authenticated-layout></app-authenticated-layout> -->
   <!-- Contenu principal avec sidebar -->
   <div class="content-wrapper">
     <app-sidebar *ngIf="showSidebar" class="sidebar"></app-sidebar>
