--- a/src/app/components/edit-client/edit-client.component.css
+++ b/src/app/components/edit-client/edit-client.component.css
@@ -1,16 +1,19 @@
 /* Conteneur principal */
 .form-container {
-    max-width: 500px;
+    max-width: 700px;
     margin: 20px auto;
     padding: 20px 30px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+    font-family: 'Segoe UI', Tchaoma, Geneva, Verdana, sans-serif;
+
   }
   
   /* Titre */
   .form-container h2 {
     margin-top: 0;
+
     margin-bottom: 20px;
     color: #333;
     font-size: 1.5em;
