--- a/src/app/components/servicesvehicules/servicesvehicules.component.html
+++ b/src/app/components/servicesvehicules/servicesvehicules.component.html
@@ -39,7 +39,7 @@
           <td>{{ sv.vehiculeId?.Immatriculation || 'N/A' }}</td>
           <td>{{ sv.serviceId?.nom || 'N/A' }}</td>
           <td>{{ sv.serviceId?.descriptioncourte || 'N/A' }}</td>
-          <td>{{ sv.serviceId?.prix | currency }}</td>
+          <td>{{ sv.serviceId?.prix | number }} MGA</td>
           <td>{{ sv.datedebut | date:'short' }}</td>
           <td>{{ sv.datefin | date:'short' }}</td>
           <td [ngClass]="'statut-' + sv.statut.toLowerCase().replace(' ', '-')">
@@ -55,7 +55,7 @@
       <i class="fas fa-car"></i> Aucun service véhicule trouvé
     </div>
     <p><span>Total des services: {{totalservice}}</span></p>
-    <p><span>Somme: {{sommeprix |currency}} Ariary</span></p>
+    <p><span>Somme: {{sommeprix |number}} Ariary</span></p>
     <!-- Pagination -->
     <div class="pagination">
       <button (click)="previousPage()" [disabled]="currentPage === 1">Précédent</button>
